--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,14 +1,35 @@
-$primary-color: #003e6c;
-$primary-color-light: #2f3568;
-$secondary-color: #ee272e;
-$secondary-color-light: #f2565c;
-$secondary-color-dark: #b20e14;
-$tertiary-color: #ff5a19;
-$light-grey: #f5f5f5;
-$medium-grey-2: #9b9b9b;
-$medium-grey: #9c9c9c;
-$dark-grey: #1b1b1b;
+/**Primary Color*/
+$cl-p: #003e6c;
+$cl-p-d: darken($cl-p, 10%);
+$cl-p-l: lighten($cl-p, 10%);
+
+/**Secondary Color*/
+$cl-s: #ee272e;
+$cl-s-d: darken($cl-s, 10%);
+$cl-s-l: lighten($cl-s, 10%);
+/**Tertiary Color*/
+$cl-t: #ff5a19;
+$cl-t-d: darken($cl-t, 10%);
+$cl-t-l: lighten($cl-t, 10%);
+
+/**Util Colors**/
+
+// Light Grey
+$cl-lg-1: #eee;
+$cl-lg-2: #ccc;
+$cl-lg-3: #999;
+
+// Medium Grey
+$cl-mg-1: #777;
+$cl-mg-2: #666;
+$cl-mg-3: #555;
+
+// Dark Grey
+$cl-dg-1: #333;
+$cl-dg-2: #222;
+$cl-dg-3: #111;
+
 $font: #434343;
+
 $white: #fff;
 $black: #000;
-$gold: #d6b268;
