--- a/scss/utils/_utils.scss
+++ b/scss/utils/_utils.scss
@@ -63,16 +63,48 @@ body.noScroll {
   position: absolute;
 }
 
+.p-f {
+  position: fixed;
+}
+
 .top-0 {
   top: 0;
+}
+
+.top-10 {
+  top: 10%;
+}
+
+.top-20 {
+  top: 20%;
+}
+
+.top-30 {
+  top: 30%;
+}
+
+.top-40 {
+  top: 40%;
 }
 
 .top-50 {
   top: 50%;
 }
 
-.bottom-0 {
-  bottom: 0;
+.bottom-10 {
+  bottom: 10%;
+}
+
+.bottom-20 {
+  bottom: 20%;
+}
+
+.bottom-30 {
+  bottom: 30%;
+}
+
+.bottom-40 {
+  bottom: 40%;
 }
 
 .bottom-50 {
@@ -127,6 +159,12 @@ body.noScroll {
   transform: translateX(-50%);
 }
 
+.center-f-h {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 //CENTER ELEMENT VERTICALLY
 
 .center-r-v {
@@ -141,6 +179,12 @@ body.noScroll {
   transform: translateY(-50%);
 }
 
+.center-f-v {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 //CENTER ELEMENT BOTH
 .center-r-b {
   position: relative;
@@ -151,6 +195,13 @@ body.noScroll {
 
 .center-a-b {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.center-f-b {
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
