--- a/css/style.css
+++ b/css/style.css
@@ -543,6 +543,179 @@ body.noScroll {
 .pl-50 {
   padding-left: 5rem; }
 
+.pa-5 {
+  padding: .5rem; }
+
+.pa-10 {
+  padding: 1rem; }
+
+.pa-15 {
+  padding: 1.5rem; }
+
+.pa-20 {
+  padding: 2rem; }
+
+.pa-25 {
+  padding: 2.5rem; }
+
+.pa-30 {
+  padding: 3rem; }
+
+.pa-35 {
+  padding: 3.5rem; }
+
+.pa-40 {
+  padding: 4rem; }
+
+.pa-45 {
+  padding: 4.5rem; }
+
+.pa-50 {
+  padding: 5rem; }
+
+.ptb-5 {
+  padding-top: .5rem;
+  padding-bottom: .5rem; }
+
+.ptb-10 {
+  padding-top: 1rem;
+  padding-bottom: 1rem; }
+
+.ptb-15 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem; }
+
+.ptb-20 {
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
+
+.ptb-25 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem; }
+
+.ptb-30 {
+  padding-top: 3rem;
+  padding-bottom: 3rem; }
+
+.ptb-35 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem; }
+
+.ptb-40 {
+  padding-top: 4rem;
+  padding-bottom: 4rem; }
+
+.ptb-45 {
+  padding-top: 4.5rem;
+  padding-bottom: 4.5rem; }
+
+.ptb-50 {
+  padding-top: 5rem;
+  padding-bottom: 5rem; }
+
+.prl-5 {
+  padding-left: .5rem;
+  padding-right: .5rem; }
+
+.prl-10 {
+  padding-left: 1rem;
+  padding-right: 1rem; }
+
+.prl-15 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem; }
+
+.prl-20 {
+  padding-left: 2rem;
+  padding-right: 2rem; }
+
+.prl-25 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem; }
+
+.prl-30 {
+  padding-left: 3rem;
+  padding-right: 3rem; }
+
+.prl-35 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem; }
+
+.prl-40 {
+  padding-left: 4rem;
+  padding-right: 4rem; }
+
+.prl-45 {
+  padding-left: 4.5rem;
+  padding-right: 4.5rem; }
+
+.prl-50 {
+  padding-left: 5rem;
+  padding-right: 5rem; }
+
+.br-r-1 {
+  border-radius: 1px; }
+
+.br-r-2 {
+  border-radius: 2px; }
+
+.br-r-2 {
+  border-radius: 2px; }
+
+.br-r-3 {
+  border-radius: 3px; }
+
+.br-r-4 {
+  border-radius: 4px; }
+
+.br-r-5 {
+  border-radius: 5px; }
+
+.br-r-6 {
+  border-radius: 6px; }
+
+.br-r-7 {
+  border-radius: 7px; }
+
+.br-r-8 {
+  border-radius: 8px; }
+
+.br-r-9 {
+  border-radius: 9px; }
+
+.br-r-10 {
+  border-radius: 10px; }
+
+.br-r-11 {
+  border-radius: 11px; }
+
+.br-r-12 {
+  border-radius: 12px; }
+
+.br-r-13 {
+  border-radius: 13px; }
+
+.br-r-14 {
+  border-radius: 14px; }
+
+.br-r-15 {
+  border-radius: 15px; }
+
+.br-r-16 {
+  border-radius: 16px; }
+
+.br-r-17 {
+  border-radius: 17px; }
+
+.br-r-18 {
+  border-radius: 18px; }
+
+.br-r-19 {
+  border-radius: 19px; }
+
+.br-r-20 {
+  border-radius: 20px; }
+
 .f-s-10 {
   font-size: 1rem; }
 
