--- a/scss/utils/_utils.scss
+++ b/scss/utils/_utils.scss
@@ -884,3 +884,15 @@ body.noScroll {
 .bg-tertiary {
   background-color: $cl-s;
 }
+
+.bg-lg-1 {
+  background-color: $cl-lg-1;
+}
+
+.bg-lg-2 {
+  background-color: $cl-lg-2;
+}
+
+.bg-lg-3 {
+  background-color: $cl-lg-3;
+}
