--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -51,3 +51,21 @@ $screen-xl-min: 1200px;
     @content;
   }
 }
+
+@mixin nonHover {
+  @media not all and (hover: none) {
+    @content;
+  }
+}
+
+@mixin edge {
+  @supports (-ms-accelerator: true) {
+    @content;
+  }
+}
+
+@mixin ie {
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    @content;
+  }
+}
