--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -59,7 +59,7 @@ $screen-xl-min: 1200px;
 }
 
 @mixin edge {
-  @supports (-ms-accelerator: true) {
+  @supports (-ms-ime-align: auto) {
     @content;
   }
 }
