--- a/scss/utils/_fonts.scss
+++ b/scss/utils/_fonts.scss
@@ -1,147 +1,155 @@
-// FONT SIZE 
+// FONT SIZE
 .f-s-10 {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .f-s-11 {
-    font-size: 1.1rem;
+  font-size: 1.1rem;
 }
 
 .f-s-12 {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .f-s-13 {
-    font-size: 1.3rem;
+  font-size: 1.3rem;
 }
 
 .f-s-14 {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 
 .f-s-15 {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .f-s-16 {
-    font-size: 1.6em;
+  font-size: 1.6rem;
+  @include sm {
+    font-size: 16px;
+  }
 }
 
 .f-s-17 {
-    font-size: 1.7rem;
+  font-size: 1.7rem;
 }
 
 .f-s-18 {
-    font-size: 1.8rem;
+  font-size: 1.8rem;
 }
 
 .f-s-19 {
-    font-size: 1.9rem;
+  font-size: 1.9rem;
 }
 
 .f-s-20 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .f-s-22 {
-    font-size: 2.2rem;
+  font-size: 2.2rem;
 }
 
 .f-s-24 {
-    font-size: 2.4rem;
+  font-size: 2.4rem;
 }
 
 .f-s-26 {
-    font-size: 2.6rem;
+  font-size: 2.6rem;
 }
 
 .f-s-28 {
-    font-size: 2.8rem;
+  font-size: 2.8rem;
 }
 
 .f-s-30 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 .f-s-35 {
-    font-size: 3.5rem;
+  font-size: 3.5rem;
 }
 
 .f-s-40 {
-    font-size: 4rem;
-
+  font-size: 4rem;
 }
 
 .f-s-45 {
-    font-size: 4.5rem;
-
+  font-size: 4.5rem;
 }
 
 .f-s-50 {
-    font-size: 5rem;
-
+  font-size: 5rem;
 }
 
 // FONT WEIGHT
 
 .f-w-3 {
-    font-weight: 300;
+  font-weight: 300;
 }
 
 .f-w-4 {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .f-w-5 {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .f-w-6 {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .f-w-7 {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .f-w-8 {
-    font-weight: 800;
+  font-weight: 800;
 }
 
 .f-w-9 {
-    font-weight: 900;
+  font-weight: 900;
 }
 
 // FONT COLOR
 
 .text-color-primary {
-    color: $cl-p;
+  color: $cl-p;
 }
 
 .text-color-secondary {
-    color: $cl-s;
+  color: $cl-s;
 }
 
 .text-color-tertiary {
-    color: $cl-t;
+  color: $cl-t;
 }
 
 .text-color-font {
-    color: $font;
+  color: $font;
 }
 
 .text-color-lg {
-    color: $cl-lg-3;
+  color: $cl-lg-3;
 }
 
 .text-color-mg {
-    color: $cl-mg-2;
+  color: $cl-mg-2;
 }
 
 .text-color-black {
-    color: $black;
+  color: $black;
 }
 
 .text-color-white {
-    color: $white;
+  color: $white;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.capitalize {
+  text-transform: capitalize;
 }
