--- a/scss/utils/_utils.scss
+++ b/scss/utils/_utils.scss
@@ -1,55 +1,3 @@
-html {
-  font-size: 62.5%;
-  overflow-x: hidden;
-  box-sizing: border-box;
-  -ms-overflow-style: scrollbar;
-
-  @include sm {
-    font-size: 50%;
-  }
-}
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-::-moz-selection {
-  color: $white;
-  background: $cl-p;
-}
-
-::selection {
-  color: $white;
-  background: $cl-p;
-}
-
-body {
-  font-weight: 400;
-  line-height: 1.7;
-  color: $font;
-  overflow-x: hidden;
-  position: relative;
-}
-
-body.noScroll {
-  overflow: hidden;
-}
-
-.clearfix {
-  clear: both;
-  overflow: auto;
-}
-
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
 // POSITION
 
 .p-r {
@@ -140,7 +88,7 @@ body.noScroll {
 
 //CENTER ELEMENT HORIZONTALY
 
-.center-margin {
+.mx-auto {
   margin: 0 auto;
 }
 
@@ -248,6 +196,27 @@ body.noScroll {
   margin-top: 5rem;
 }
 
+.mt-60 {
+  margin-top: 6rem;
+}
+
+.mt-70 {
+  margin-top: 7rem;
+}
+
+.mt-80 {
+  margin-top: 8rem;
+}
+
+.mt-90 {
+  margin-top: 9rem;
+}
+
+.mt-100 {
+  margin-top: 10rem;
+}
+
+
 //right
 .mr-5 {
   margin-right: 0.5rem;
@@ -331,6 +300,26 @@ body.noScroll {
   margin-bottom: 5rem;
 }
 
+.mb-60 {
+  margin-bottom: 6rem;
+}
+
+.mb-70 {
+  margin-bottom: 7rem;
+}
+
+.mb-80 {
+  margin-bottom: 8rem;
+}
+
+.mb-90 {
+  margin-bottom: 9rem;
+}
+
+.mb-100 {
+  margin-bottom: 10rem;
+}
+
 //left
 
 .ml-5 {
@@ -372,6 +361,46 @@ body.noScroll {
 .ml-50 {
   margin-left: 5rem;
 }
+
+//top bottom 
+
+.my-5 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.my-10 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.my-15 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+.my-20 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.my-25 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+.my-30 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+.my-35 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+}
+.my-40 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+.my-50 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 
 //Padding
 
@@ -586,104 +615,104 @@ body.noScroll {
 
 //Top Bottom
 
-.ptb-5 {
+.py-5 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.ptb-10 {
+.py-10 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
 
-.ptb-15 {
+.py-15 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
 
-.ptb-20 {
+.py-20 {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
-.ptb-25 {
+.py-25 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
 
-.ptb-30 {
+.py-30 {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
 
-.ptb-35 {
+.py-35 {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
 }
 
-.ptb-40 {
+.py-40 {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
 
-.ptb-45 {
+.py-45 {
   padding-top: 4.5rem;
   padding-bottom: 4.5rem;
 }
 
-.ptb-50 {
+.py-50 {
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
 
 //Right Left
 
-.prl-5 {
+.px-5 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
 
-.prl-10 {
+.px-10 {
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-.prl-15 {
+.px-15 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
-.prl-20 {
+.px-20 {
   padding-left: 2rem;
   padding-right: 2rem;
 }
 
-.prl-25 {
+.px-25 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
 
-.prl-30 {
+.px-30 {
   padding-left: 3rem;
   padding-right: 3rem;
 }
 
-.prl-35 {
+.px-35 {
   padding-left: 3.5rem;
   padding-right: 3.5rem;
 }
 
-.prl-40 {
+.px-40 {
   padding-left: 4rem;
   padding-right: 4rem;
 }
 
-.prl-45 {
+.px-45 {
   padding-left: 4.5rem;
   padding-right: 4.5rem;
 }
 
-.prl-50 {
+.px-50 {
   padding-left: 5rem;
   padding-right: 5rem;
 }
@@ -774,6 +803,10 @@ body.noScroll {
   border-radius: 20px;
 }
 
+.br-r-50 {
+  border-radius: 50%;
+}
+
 //BUTTON
 
 .btn:link,
@@ -796,12 +829,7 @@ body.noScroll {
 .btn-primary:hover {
   background-color: $cl-p-d;
 }
-
-.btn-secondary:link,
-.btn-secondary:visited,
-.btn-secondary:hover,
-.btn-secondary:focus,
-.btn-secondary:active {
+py
   background-color: $cl-s;
 }
 
@@ -824,43 +852,43 @@ body.noScroll {
 ////TRANSITIONS
 
 .transition-1 {
-  transition: all 0.1s;
+  transition: all 0.1s ease-in-out;
 }
 
 .transition-2 {
-  transition: all 0.2s;
+  transition: all 0.2s ease-in-out;
 }
 
 .transition-3 {
-  transition: all 0.3s;
+  transition: all 0.3s ease-in-out;
 }
 
 .transition-4 {
-  transition: all 0.4s;
+  transition: all 0.4s ease-in-out;
 }
 
 .transition-5 {
-  transition: all 0.5s;
+  transition: all 0.5s ease-in-out;
 }
 
 .transition-6 {
-  transition: all 0.6s;
+  transition: all 0.6s ease-in-out;
 }
 
 .transition-7 {
-  transition: all 0.7s;
+  transition: all 0.7s ease-in-out;
 }
 
 .transition-8 {
-  transition: all 0.8s;
+  transition: all 0.8s ease-in-out;
 }
 
 .transition-9 {
-  transition: all 0.9s;
+  transition: all 0.9s ease-in-out;
 }
 
 .transition-10 {
-  transition: all 1s;
+  transition: all 1s ease-in-out;
 }
 
 //BACKGROUND
